ola-parser/src/testdata/syntaxTests/parsing/payable_accessor.sol
contract test {
	u256 payable x;
}
// ----
// ParserError 9106: (22-29): State mutability can only be specified for address types.
